# flutter_embedded

./: .clang-format  .gitignore  .travis.yml  0001-fix-armv7-build.patch  0001-fix-dead-libcxx-repo.patch  CMakeLists.txt  LICENSE  README.md  dot-client-fixed.py  dot-gclient.py  engine.version.stable  install-build-deps.sh
.github/: FUNDING.yml
.github/actions/: build-engine.yml
.github/actions/build-engine/: action.yml
.github/workflows/: blank.yml  build.yml  channel-watch.yml  x64-embedder-engine.yml
cmake/: app.clang.toolchain.cmake.in  build_dependencies.cmake  build_engine.cmake  build_toolchain.cmake  build_tslib.cmake  clang.toolchain.cmake.in  create.app.toolchain.cmake  depot_tools.cmake  engine.cmake  engine.gclient.in  engine_options.cmake  flutter-pi.cmake  flutter.glfw.cmake  flutter.pi.cmake  glfw.flutter.cmake  hello_pi.cmake  llvm_config.cmake  options.cmake  packaging.cmake  rpi.clang.toolchain.cmake.in  rpi.cmake  rpi.flutter.cmake  rpi.sysroot.cmake  skia.gclient.in  sysroot.cmake  target.clang.toolchain.cmake.in  toolchain_config.cmake  tslib.cmake  wayland.cmake
cmake/cmake/: global.cmake  options.cmake  vulkan.cmake
cmake/files/: BUILD.gn  flutter-pi.cmake  hello_pi.cmake  icu.patch  toolchain.custom.BUILD.gn
cmake/patches/: compiler-rt.patch  custom_BUILD_gn.patch  dart.patch  engine.patch  engine_compiler_build.patch.in  flutter_platform.patch  icu.patch  libcxx.patch  libcxxabi.patch.in
test_app/: README.md  pubspec.yaml
test_app/lib/: main.dart
